agregado de imagen en creacion de negocio
